<resources>
    <string name="app_name">Info Books</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="account_not_found">No accounts match that information</string>
    <string name="action_logout">Log out</string>
    <string name="action_save_on_map">Save on map</string>
    <string name="action_scan_code">Scan code</string>
    <string name="action_search">Search</string>
    <string name="authors">Author(s):</string>
    <string name="average_rating">Average rating:</string>
    <string name="book_not_found">Can\'t find your book, try again!</string>
    <string name="book_thumbnail">Book thumbanil</string>
    <string name="cancelled">Cancelled</string>
    <string name="description">Description:</string>
    <string name="email_error_message">Please enter a valid email.</string>
    <string name="error_message">An error has occurred. Please try again</string>
    <string name="error_message_saving_book_on_map">An error has occurred saving book on map</string>
    <string name="error_message_saving_book">An error has occurred saving book</string>
    <string name="exit_message">Are you sure you want to close application?</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_message">Forgot your password? It happens.\nWe\'ll send you a link to reset it.</string>
    <string name="gps_error_message">Do you want to turn on GPS?</string>
    <string name="gps_error_title">GPS is not enabled.</string>
    <string name="helper_text">Use at least six characters.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_search">Search books by ISBN</string>
    <string name="location_not_found">Location not found. Please try again</string>
    <string name="log_in">Log in</string>
    <string name="log_in_message">Already have an account? Log in.</string>
    <string name="log_in_error_message">This email and password combination is incorrect. Please try again or sign up</string>
    <string name="main_activity_text">Start searching by pressing the lens</string>
    <string name="no">No</string>
    <string name="no_connection">No connection</string>
    <string name="or">OR</string>
    <string name="page_count">Page count:</string>
    <string name="published_date">Published date:</string>
    <string name="saved">Saved</string>
    <string name="save_on_the_map">Do you want to locate the book in your current position?</string>
    <string name="sent_email_message">We just sent you a password reset email</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_message">Don\'t have an account? Sign up.</string>
    <string name="tagged_by">Tagged by:</string>
    <string name="title_activity_maps">Map</string>
    <string name="yes">Yes</string>
</resources>